# pipelines

pipelines/dagster-project/: pyproject.toml
pipelines/dagster-project/dagster_project/tmp3l0ujzfw/history/: runs.db
pipelines/dagster-project/dagster_project/tmp3l0ujzfw/history/runs/: 6d4c3b0d-0e3e-4976-b626-ffe2a1954fa0.db  index.db
pipelines/dagster-project/dagster_project/tmp3l0ujzfw/schedules/: schedules.db
pipelines/dagster-project/dagster_project/tmpnfhpnmii/history/: runs.db
pipelines/dagster-project/dagster_project/tmpnfhpnmii/history/runs/: a22aee42-0a29-4ee6-9415-bfbe47c48337.db  index.db
pipelines/dagster-project/dagster_project/tmpnfhpnmii/schedules/: schedules.db
pipelines/dagster-project/dagster_project/tmpnfhpnmii/storage/a22aee42-0a29-4ee6-9415-bfbe47c48337/get_domain_of_url/: result
pipelines/example_pipeline/: database.db  norm.csv  pipeline.py
pipelines/pipelines/: cli.py  database.py  tasks.py
pipelines/pipelines/dagster/: pyproject.toml
pipelines/pipelines/dagster/dagster/: run.py
pipelines/pipelines/example_pipeline/: database.db
pipelines/prefect/: pyproject.toml
pipelines/prefect-project/: pyproject.toml
pipelines/prefect/prefect/: result.csv  run.py
