[tool.poetry]
name = "dagster-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dagster_project"}]

[tool.poetry.dependencies]
python = "^3.11"
dagster = "^1.3.0"
dagit = "^1.3.0"
requests = "^2.28.2"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
