[tool.poetry]
name = "prefect-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prefect_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
prefect = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
